<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/call"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_call_24"
        android:title="@string/call"/>
    <item
        android:id="@+id/search"
        app:showAsAction="always"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/profile"/>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting"/>
    <item
        android:id="@+id/backGround"
        android:icon="@drawable/baseline_wallpaper_24"
        android:title="@string/set_background_wallpaper"/>

</menu>