<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:background="#DDE6ED"
    tools:context=".ui.fragment.EnterNumber">


    <ScrollView
        android:id="@+id/userprofile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
android:paddingTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">






            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="#F1F5F6"
                android:layout_marginBottom="10dp"
                android:elevation="8dp"

                android:layout_margin="5dp"
                app:cardElevation="5dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_verification11"
                        android:gravity="center"
                        android:padding="5dp"

                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/biryani_semibold"
                        android:id="@+id/message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/we_will_send_you_one_time_password_on_this_number"
                        android:gravity="center"
                        android:padding="2dp"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:layout_gravity="center"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp"

                     android:gravity="center"
                        android:layout_marginTop="20dp"
                        >

                        <com.hbb20.CountryCodePicker
                            app:ccp_defaultNameCode="IND"
                            android:id="@+id/country_code"
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                    android:layout_gravity="top"
                            app:ccp_showFlag="true"
                            app:ccp_showNameCode="false"
                            app:ccp_showFullName="false"
                            app:ccp_showPhoneCode="false"
                            app:ccp_showSpinner="false"
                            app:ccp_showFastScroller="false"
                            app:ccp_showSearch="false"
                            android:layout_marginEnd="10dp"
                            app:ccp_showBottomNavigationIcon="true"
                            android:layout_height="wrap_content">
                        </com.hbb20.CountryCodePicker>


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="300dp"
                       android:layout_gravity="center"
                            android:gravity="center"
                            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_phone_number">

                            <EditText
                                android:id="@+id/ankit"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="number"
                                android:backgroundTint="#47EA4F"
                                android:autofillHints="number"
                                tools:ignore="LabelFor" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sendOtp"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="70dp"
                        android:background="@drawable/name_background1"

                        android:text="@string/genrate_otp"
                        android:textColor="#EEEEEE"
                        android:textSize="20sp"
                        android:layout_marginBottom="70dp"
                        android:textStyle="italic" />



                </LinearLayout>




            </com.google.android.material.card.MaterialCardView>






    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>