<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.EditProfile"
    android:background="#3E3757"
    android:alpha=".85"
    >
    <ScrollView
        android:id="@+id/userprofileEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            >
<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbarEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    app:titleMarginStart="20dp"
    app:navigationIcon="@drawable/baseline_arrow_back_24"
    app:title="Edit Profile"
    app:titleTextColor="#7AF6E4"/>

            <LinearLayout
                android:id="@+id/page_userprofile_ek1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp"

                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/welcome"
                    android:fontFamily="@font/biryani_semibold"
                    android:layout_width="match_parent"
                    android:layout_height="53.492657585144dp"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:text="Edit Profile"
                    android:textColor="@color/get_started_color"
                    android:textSize="31.65sp" />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_imageEdit"
                    android:layout_width="156dp"
                    android:layout_height="156dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/man"
                    app:civ_border_width="2dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/enterNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="name"
                    android:background="@drawable/name_background"
                    android:elevation="2dp"
                    android:layout_gravity="center"

                    android:textColorHint="#6B705E"
                    android:textColor="#C3E85A"
                    android:fontFamily="@font/biryani_semibold"
                    android:hint="@string/enter_your_name"
                    android:inputType="textPersonName"
                    android:padding="15dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/enterEmailIdEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/biryani_semibold"
                    android:hint="@string/enter_your_email_id"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="#C3E85A"
                    android:textColorHint="#6B705E"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/name_background"
                    android:autofillHints="emailAddress"
                    android:elevation="2dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/enterDescriptionEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/biryani_semibold"
                    android:hint="@string/description"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="#C3E85A"
                    android:elevation="2dp"
                    android:textColorHint="#6B705E"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/name_background"
                    android:autofillHints="description" />



                <Button
                    android:id="@+id/ankitBtnEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
android:elevation="8dp"
                    android:shadowRadius="3"
                    android:text="@string/submit"
                    android:textSize="25sp"
                    android:textColor="#01251E"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/biryani_semibold"
                    android:background="@drawable/name_background1"
                    />

                <Button
                    android:id="@+id/logOut"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Log Out"
                    android:textColor="#01251E"
                    android:fontFamily="@font/biryani_semibold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>







            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>